--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "start": "node build/bin/server.js",
     "build": "node ace build",
-    "dev": "node ace serve --hmr",
+    "dev": "node ace serve -w",
     "test": "node ace test",
     "lint": "eslint .",
     "format": "prettier --write .",
